@@ -12,7 +12,7 @@ int apply_manual(object *op, object *tmp, int aflag);
 int apply_by_living(object *pl, object *op, int aflag, int quiet);
 void apply_by_living_below(object *pl);
 int apply_can_apply_object(const object *who, const object *op);
-int apply_check_weapon_power(const object *who, int improvs);
+int apply_check_weapon_power(const object *who, int improves);
 int apply_special(object *who, object *op, int aflags);
 int apply_auto(object *op);
 void apply_auto_fix(mapstruct *m);
@@ -134,8 +134,6 @@ int command_dumpmap(object *op, char *params);
 int command_dumpallmaps(object *op, char *params);
 int command_printlos(object *op, char *params);
 int command_version(object *op, char *params);
-int command_output_sync(object *op, char *params);
-int command_output_count(object *op, char *params);
 int command_listen(object *op, char *params);
 int command_statistics(object *pl, char *params);
 int command_fix_me(object *op, char *params);
@@ -206,6 +204,7 @@ int command_rename_item(object *op, char *params);
 int command_lock_item(object *op, char *params);
 int command_use(object *op, char *params);
 /* c_party.c */
+int confirm_party_password(object *op);
 void receive_party_password(object *op);
 int command_gsay(object *op, char *params);
 int command_party(object *op, char *params);
@@ -331,6 +330,20 @@ int move_to(object *op, int x, int y);
 void init_ob_methods(void);
 /* ob_types.c */
 void register_all_ob_types(void);
+/* party.c */
+partylist *party_form(object *op, const char *partyname);
+void party_join(object *op, partylist *party);
+void party_leave(object *op);
+partylist *party_find(const char *partyname);
+void party_remove(partylist *party);
+partylist *party_get_first(void);
+partylist *party_get_next(const partylist *party);
+void party_obsolete_parties(void);
+const char *party_get_password(const partylist *party);
+void party_set_password(partylist *party, const char *password);
+int party_confirm_password(const partylist *party, const char *password);
+void party_send_message(object *op, const char *message);
+const char *party_get_leader(const partylist *party);
 /* pets.c */
 object *pets_get_enemy(object *pet, rv_vector *rv);
 void pets_terminate_all(object *owner);
@@ -510,7 +523,6 @@ double shopkeeper_approval(const mapstruct *map, const object *player);
 int describe_shop(const object *op);
 int is_in_shop(object *ob);
 int coords_in_shop(mapstruct *map, int x, int y);
-StringBuffer *query_cost_string(const object *tmp, object *who, int flag, StringBuffer *buf);
 /* skills.c */
 int steal(object *op, int dir, object *skill);
 int pick_lock(object *pl, int dir, object *skill);
@@ -659,18 +671,3 @@ void cleanup(void);
 void leave(player *pl, int draw_exit);
 int forbid_play(void);
 int server_main(int argc, char **argv);
-/* party.c */
-partylist *party_form(object *op, const char *partyname);
-void party_join(object *op, partylist *party);
-void party_leave(object *op);
-partylist *party_find(const char *partyname);
-void party_remove(partylist *party);
-partylist *party_get_first(void);
-partylist *party_get_next(const partylist *party);
-void party_obsolete_parties(void);
-int party_confirm_password(const partylist *party, const char *password);
-void party_send_message(object *op, const char *message);
-const char *party_get_password(const partylist *party);
-void party_set_password(partylist *party, const char *password);
-const char *party_get_leader(const partylist *party);
-void party_add_kill(partylist *party, const char *killer, const char *dead, long exp);
