@@ -1179,75 +1179,6 @@ int command_version(object *op, char *params) {
     return 0;
 }
 
-
-/**
- * Output-sync command.
- *
- * @param op
- * player asking for information.
- * @param params
- * new value.
- * @return
- * 1.
- */
-int command_output_sync(object *op, char *params) {
-    int val;
-
-    if (!params) {
-        draw_ext_info_format(NDI_UNIQUE, 0, op, MSG_TYPE_COMMAND, MSG_SUBTYPE_NONE,
-                             i18n_translate(get_language(op), I18N_MSG_CMISC_099),
-                             i18n_translate(get_language(op), I18N_MSG_CMISC_099),
-                             op->contr->outputs_sync);
-        return 1;
-    }
-    val = atoi(params);
-    if (val > 0) {
-        op->contr->outputs_sync = val;
-        draw_ext_info_format(NDI_UNIQUE, 0, op, MSG_TYPE_COMMAND, MSG_SUBTYPE_NONE,
-                             i18n_translate(get_language(op), I18N_MSG_CMISC_100),
-                             i18n_translate(get_language(op), I18N_MSG_CMISC_100),
-                             op->contr->outputs_sync);
-    } else
-        draw_ext_info(NDI_UNIQUE, 0, op, MSG_TYPE_COMMAND, MSG_SUBTYPE_NONE,
-                      i18n_translate(get_language(op), I18N_MSG_CMISC_101), NULL);
-
-    return 1;
-}
-
-/**
- * output-count command.
- *
- * @param op
- * player asking for information.
- * @param params
- * new value.
- * @return
- * 1.
- */
-int command_output_count(object *op, char *params) {
-    int val;
-
-    if (!params) {
-        draw_ext_info_format(NDI_UNIQUE, 0, op, MSG_TYPE_COMMAND, MSG_SUBTYPE_NONE,
-                             i18n_translate(get_language(op), I18N_MSG_CMISC_102),
-                             i18n_translate(get_language(op), I18N_MSG_CMISC_102),
-                             op->contr->outputs_count);
-        return 1;
-    }
-    val = atoi(params);
-    if (val > 0) {
-        op->contr->outputs_count = val;
-        draw_ext_info_format(NDI_UNIQUE, 0, op, MSG_TYPE_COMMAND, MSG_SUBTYPE_NONE,
-                             i18n_translate(get_language(op), I18N_MSG_CMISC_103),
-                             i18n_translate(get_language(op), I18N_MSG_CMISC_103),
-                             op->contr->outputs_count);
-    } else
-        draw_ext_info(NDI_UNIQUE, 0, op, MSG_TYPE_COMMAND, MSG_SUBTYPE_NONE,
-                      i18n_translate(get_language(op), I18N_MSG_CMISC_104), NULL);
-
-    return 1;
-}
-
 /**
  * Change the player's listen level.
  *
